results overflow fix

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -35,7 +35,7 @@
 
       .ui.segment {
         flex: 1 !important;
-        overflow: auto;
+        overflow-y: auto;
       }
     }
   }
